replace old Java constructs